# nakalab_cx7_pkgs

./: README.md
cx7_bringup/: README.md  package.xml  setup.cfg  setup.py
cx7_bringup/launch/: .cranex7_bringup.launch.py.swp  crane_x7_d435_with_table.launch.py  cranex7_bringup.launch.py  move_group.rviz  run_move_group.launch.py
cx7_config/: CMakeLists.txt  README.md  package.xml
cx7_config/config/: crane_x7_d435.srdf
cx7_config/cx7_config/: robot_description_loader.py
cx7_config/urdf/: .crane_x7.xacro.swp  a.urdf  crane_x7.urdf.xacro
cx7_controller/: CMakeLists.txt  package.xml
cx7_controller/launch/: cx7_controller.launch.py
cx7_controller/src/: move_to_pose.cpp  move_to_pose.cpp.orig  servo_cmd_vel.cpp
cx7_interface/: CMakeLists.txt  package.xml
cx7_interface/srv/: MoveToPose.srv
